--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -7,3 +7,145 @@ Lilás:#5f2c82
 Vamos usar isso dentro do estilo inteiro 
 */
 
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing:border-box ;/*Para que a borda faça parte da conta de largura, por padrão ele testa dentro da borda*/
+}
+
+/*Body e o html baseado no mobile first*/
+body,html{
+background-color:#5f2c82 ;
+height: 100vh; /*100% Da tela de haltura */
+width: 100vw; /*100% da largura */
+
+}
+
+/*Conteudo principal tenha largura de 100% */
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+/*Vamos colocar uma animação simples */
+section#login{
+    position: absolute; /*Com o objectivo de colocar no meio ou centro */
+    top: 50%;
+    left: 50%;
+   
+    background-color: white;
+    width: 250px;
+    height: 515px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+    transform: translate(-50%,-50%);
+   /*Vamos fazer uma transição de largura e haltura de 1s*/
+   transition: width 0.3s, heigth 0.3s;
+   /*Para nós aprimorar a nossa transição vamos usar transion-timing-function*/
+   transition-timing-function: ease; /*É para ele ficar suave durante animação porque não vai acilera nem desacilera na mesma velocidade  */
+}
+
+section#login>div#imagem{
+    display: block;
+    background:#5f2c82  url(../imagens/login.jpg); /*Coloque no-repeat*/
+    height: 200px;
+    background-size: cover;
+   
+}
+
+section#login>div#formulario{
+    display: block;
+    padding:10px;
+
+}
+
+/*Vamos estilizar o título Login*/
+div#formulario>h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+/*Vamos reduzir o tamanho dos textos */
+div#formulario>p{
+    font-size: 0.8em;
+}
+
+div.campo>label{
+    display: none;/*Para eliminar a senha */
+}
+
+/*Para estilizar os icone
+div.campo>i{
+    backgound:black;
+    color:white;
+    font-size:2em;
+    width:40px;
+    padding:5px;
+}*/
+
+div.campo>input{
+    background-color:#49a09d ;
+    font-size: 1em;
+    width: 100%;
+    /*Se eu adicionar icones no campo de formulário vou precisar fazer um calculo
+    width:calc(100%-50px) você pode variar os pixeis da imagem até se enquadrar direito na caixa*/
+    
+    
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    /*transform: translateY(-10px); vai ser ajustar as partes em falta */
+}
+
+/*Quando eu focar o campo precisa ficar branco*/
+div.campo>input:focus-within{
+background-color: white;
+}
+
+form>div.campo{
+    background-color: #5f2c82;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px; /*Uma margem em cima e outra embaixo */
+}
+
+form>input[type=submit]{
+    display: block;
+    font-size: 1em;/*Para ele ficar do tamanho padrão da letra */
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form>input[type=submit]:hover{
+    background-color: #2d6462;
+}
+
+form>a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;/*Para ele ficar do tamanho padrão da letra */
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;/*Para ele ficar no meio */
+    margin-top: 5px;/*Para separ com o elemento de cima */
+    background-color:  white;
+    color: #2d6462 ;
+    border: 1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+form>a.botao:hover{
+    background-color:#6cd3cf ;
+}
